--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -41,10 +41,10 @@ data:
   extends:
     - .template
   stage: data
-  rules:
-     - changes:  # Include the job and set to when:manual if any of the follow paths match a modified file.
-         - datatools/**
-  when: manual
+  #rules:
+  #   - changes:  # Include the job and set to when:manual if any of the follow paths match a modified file.
+  #       - datatools/**
+  #when: manual
   script:
   - source activate tagger
   - mkdir data
