--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -61,6 +61,8 @@ train:
   needs: 
     - job : data
       optional: true
+  tags: [k8s-gpu]
+  image: gitlab-registry.cern.ch/cebrown/docker-images/mamba_jettagger:latest
   script:
   - mc cp $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir/training_data_$Inputs.tgz ./
   - tar -xf training_data_$Inputs.tgz
