Roll back to previous php-plots version

--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -162,9 +162,10 @@ upload:
     - cd ..
     - echo "$AUTO_DEVOPS_CERNBOX_PASS" | kinit "$AUTO_DEVOPS_CERNBOX_USER@CERN.CH" > /dev/null
     - rm -rf php-plots
-    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch/cms-analysis/general/php-plots.git
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch/cms-analysis/general/php-plots.git -b update_extension_grouping
     - export PATH="${PATH}:/builds/ml_l1/php-plots/bin"
-    - pb_deploy_plots.py TrainTagger/${Name} /eos/user/c/cebrown/www/JetTagging/${CI_PROJECT_NAME}/${Name}/${CI_COMMIT_REF_NAME} --recursive --pdf-to-png --extensions h5,cpp,h,yml,tcl,sh, 
+    - pb_copy_index.py rainTagger/${Name} --recursive
+    - pb_deploy_plots.py TrainTagger/${Name} /eos/user/c/cebrown/www/JetTagging/${CI_PROJECT_NAME}/${Name}/${CI_COMMIT_REF_NAME} --recursive --extensions h5,cpp,h,yml,tcl,sh,png,pdf 
   artifacts:
     paths:
       - $Name
