--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -164,53 +164,9 @@ upload:
     - rm -rf php-plots
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch/cms-analysis/general/php-plots.git -b feature/update_extension_grouping
     - export PATH="${PATH}:/builds/ml_l1/php-plots/bin"
-    - pb_copy_index.py rainTagger/${Name} --recursive
+    - pb_copy_index.py TrainTagger/${Name} --recursive
     - pb_deploy_plots.py TrainTagger/${Name} /eos/user/c/cebrown/www/JetTagging/${CI_PROJECT_NAME}/${Name}/${CI_COMMIT_REF_NAME} --recursive --extensions h5,cpp,h,yml,tcl,sh,png,pdf 
   artifacts:
     paths:
       - $Name
     expire_in: 1 day
-
-# .publish:
-#   extends: .auto_devops_upload_eos_template
-#   image: gitlab-registry.cern.ch/cms-cactus/ops/auto-devops/eos:tag-0.4.1
-#   stage: upload
-#   tags: [ k8s-cvmfs ]
-#   needs : [pre-upload]
-#   variables:
-#     CERNBOX_FOLDER:  /eos/user/c/cebrown/www/JetTagging/${CI_PROJECT_NAME}/${Name}/${REMOTE_FOLDER}
-
-# publish-emulationPlots:
-#   extends: .publish
-#   needs : [pre-upload]
-#   variables:
-#     LOCAL_FOLDER: ${CI_PROJECT_DIR}/Deploy/$Name/plots/emulation
-#     REMOTE_FOLDER: Emulation_Comparison_Plots
-
-# publish-synthesis:
-#   extends: .publish
-#   needs : [pre-upload]
-#   variables:
-#     LOCAL_FOLDER: ${CI_PROJECT_DIR}/Deploy/$Name/firmware
-#     REMOTE_FOLDER: Synthesis_Output
-
-# publish-modelfiles:
-#   extends: .publish
-#   needs : [pre-upload]
-#   variables:
-#     LOCAL_FOLDER: ${CI_PROJECT_DIR}/Deploy/$Name/model
-#     REMOTE_FOLDER: Model_Files
-
-# publish-evaluationPlots:
-#   extends: .publish
-#   needs : [pre-upload]
-#   variables:
-#     LOCAL_FOLDER: ${CI_PROJECT_DIR}/Deploy/$Name/plots/testing
-#     REMOTE_FOLDER: Evaluation_Plots
-
-# publish-inputPlots:
-#   extends: .publish
-#   needs : [pre-upload]
-#   variables:
-#     LOCAL_FOLDER: ${CI_PROJECT_DIR}/Deploy/$Name/plots/training
-#     REMOTE_FOLDER: Training_Plots
