Plots and Improve Training (#8)
* add ROC plotting

* reshape data, and some control parameters

* fix CI

* add bbbb plots

* finish up the plotting codex

* jet pt histograms

* plot the inputs

* Evaluate to use eos enabled runners

* adjust emulation script

* add response plot and check eos

* ROC curves between 2 classes

* debug pipeline

* pipeline test

* test eos path

* test more pipeline

* put the pipeline back in place

* request more memory

* use less events

* fix emulation plotting and use more events on pipeline

* more response plotting and point to correct data dir

* add interpolation and fix the dataset name

* cosmetic change for bbbb

* add rms plotting and trigger the data processing

* uncomment plots

* trigger new pipelines for new samples

* eos dir formatting

* fix some bbbb bugs

* average to np.mean and more events for efficienct

* add some sources for working points

---------

Co-authored-by: Christopher Brown <chris.brown@fpsl.net>

--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -42,7 +42,7 @@ data:
   stage: data
   rules:
      - changes:  # Include the job and set to when:manual if any of the follow paths match a modified file.
-         - datatools/**
+         - tagger/data/**
   when: manual
   script:
   - source activate tagger
@@ -68,8 +68,6 @@ train:
   - python tagger/train/train.py
   - python tagger/train/train.py --plot-basic
   - cd output/baseline
-  - mkdir testing_data
-  - mv *.npy testing_data
   - tar -cf testing_data_$Inputs.tgz testing_data
   - mc cp testing_data_$Inputs.tgz $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir
   artifacts:
@@ -83,12 +81,20 @@ evaluate:
   extends:
     - .template
   stage: evaluate
+  tags: [k8s-gpu]
+  image: gitlab-registry.cern.ch/cebrown/docker-images/mamba_jettagger:latest
+  variables:
+    KUBERNETES_MEMORY_REQUEST: 32Gi
+    KUBERNETES_CPU_REQUEST: 1
   needs: [train]
   dependencies: [train]
   script:
   - mc cp $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir/training_data_$Inputs.tgz ./
   - tar -xf training_data_$Inputs.tgz
   - source activate tagger
+  - echo "$AUTO_DEVOPS_CERNBOX_PASS" | kinit "$AUTO_DEVOPS_CERNBOX_USER@CERN.CH" > /dev/null
+  - python tagger/plot/bbbb.py --deriveWPs --minbias $EOS_DIR/$DataDir/$MINBIAS -n 650000
+  - python tagger/plot/bbbb.py --eff -s $EOS_DIR/$DataDir/$BBBB -n 500000
   - cd output/baseline
   - mc cp $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir/testing_data_$Inputs.tgz ./
   - tar -xf testing_data_$Inputs.tgz
