--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,11 @@ DeepSet:baseline_4param:
   variables:
     Name: baseline_4param
     Inputs: baseline
-    DataDir: baselineTRK_4param_021024
+    DataDir: baselineTRK_4param_221124
     Dataset: All200.root
+    MINBIAS: MinBias_PU200.root
+    BBBB: ggHHbbbb_PU200.root
+    EOS_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9
     SCRAM_ARCH: 'el9_amd64_gcc12'
     CMSSW_VERSION: 'CMSSW_14_0_0_pre3'
     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_0_0_pre3-JetTaggerNN'
@@ -17,8 +20,11 @@ DeepSet:baseline_5param:
   variables:
     Name: baseline_5param
     Inputs: baseline
-    DataDir: baselineTRK_5param_021024
+    DataDir: baselineTRK_5param_221124
     Dataset: All200.root
+    MINBIAS: MinBias_PU200.root
+    BBBB: ggHHbbbb_PU200.root
+    EOS_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9
     SCRAM_ARCH: 'el9_amd64_gcc12'
     CMSSW_VERSION: 'CMSSW_14_0_0_pre3'
     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_0_0_pre3-JetTaggerNN'
@@ -28,8 +34,11 @@ DeepSet:baseline_4param_extended_trk:
   variables:
     Name: baseline_4param_extended_trk
     Inputs: baseline
-    DataDir: extendedTRK_4param_021024
+    DataDir: extendedTRK_4param_221124
     Dataset: All200.root
+    MINBIAS: MinBias_PU200.root
+    BBBB: ggHHbbbb_PU200.root
+    EOS_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9
     SCRAM_ARCH: 'el9_amd64_gcc12'
     CMSSW_VERSION: 'CMSSW_14_0_0_pre3'
     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_0_0_pre3-JetTaggerNN'
@@ -39,8 +48,11 @@ DeepSet:baseline_5param_extended_trk:
   variables:
     Name: baseline_5param_extended_trk
     Inputs: baseline
-    DataDir: extendedTRK_5param_021024
+    DataDir: extendedTRK_5param_221124
     Dataset: All200.root
+    MINBIAS: MinBias_PU200.root
+    BBBB: ggHHbbbb_PU200.root
+    EOS_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9
     SCRAM_ARCH: 'el9_amd64_gcc12'
     CMSSW_VERSION: 'CMSSW_14_0_0_pre3'
     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_0_0_pre3-JetTaggerNN'
