--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -66,14 +66,15 @@ train:
   - mc cp $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir/training_data_$Inputs.tgz ./
   - tar -xf training_data_$Inputs.tgz
   - source activate tagger
-  - python tagger/train/train.py
-  - python tagger/train/train.py --plot-basic
+  - python tagger/train/train.py -n $Name
+  - python tagger/train/train.py --plot-basic -n $Name
   - cd output/baseline
   - tar -cf testing_data_$Inputs.tgz testing_data
   - mc cp testing_data_$Inputs.tgz $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir
   artifacts:
     paths:
       - output
+      - mlflow_run_id.txt
     exclude:
       - .npy
     expire_in: 1 day
@@ -103,6 +104,7 @@ evaluate:
   artifacts:
     paths:
       - output
+      - mlflow_run_id.txt
     exclude:
       - .npy
     expire_in: 1 day
@@ -116,15 +118,16 @@ synth:
   needs : [train]
   dependencies : [train]
   script:
-    - source /opt/Xilinx/Vivado/2022.2/settings64.sh
+    - source /opt/Xilinx/Vivado/2024.1/settings64.sh
     - export PATH="/externalopt/modelsim/2019.2/modeltech/bin/:$PATH"
     - export LD_LIBRARY_PATH=/externalopt/cactus/lib:$LD_LIBRARY_PATH
     - export PYTHONPATH=/builds/ml_l1/TrainTagger:$PYTHONPATH
     - source activate tagger
-    - python tagger/firmware/hls4ml_convert.py
+    - python tagger/firmware/hls4ml_convert.py -n $Name
   artifacts:
     paths:
       - tagger/firmware
+      - mlflow_run_id.txt
     expire_in: 1 day
 
 emulation-evaluate:
@@ -156,9 +159,7 @@ profile:
   needs: [emulate,train,synth]
   dependencies: [emulate,train,synth]
   script:
-  - source /opt/Xilinx/Vivado/2022.2/settings64.sh
-  - export PATH="/externalopt/modelsim/2019.2/modeltech/bin/:$PATH"
-  - export LD_LIBRARY_PATH=/externalopt/cactus/lib:$LD_LIBRARY_PATH
+  - source /opt/Xilinx/Vivado/2024.1/settings64.sh
   - export PYTHONPATH=/builds/ml_l1/TrainTagger:$PYTHONPATH
   - source activate tagger
   - mkdir data
@@ -190,6 +191,7 @@ upload:
   script:
     - mkdir $Name
     - mv tagger/firmware $Name
+    - mkdir $Name/plots
     - mv output/baseline/model $Name/model
     - mv output/baseline/plots/emulation $Name/plots
     - mv output/baseline/plots/profile $Name/plots
@@ -201,7 +203,7 @@ upload:
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch/cms-analysis/general/php-plots.git -b feature/update_extension_grouping
     - export PATH="${PATH}:/builds/ml_l1/php-plots/bin"
     - pb_copy_index.py TrainTagger/${Name} --recursive
-    - pb_deploy_plots.py TrainTagger/${Name} /eos/user/c/cebrown/www/JetTagging/${CI_PROJECT_NAME}/${Name}/${CI_COMMIT_REF_NAME} --recursive --extensions h5,cpp,h,yml,tcl,sh,png,pdf 
+    - pb_deploy_plots.py TrainTagger/${Name} /eos/user/c/cebrown/www/JetTagging/${CI_PROJECT_NAME}/${CI_COMMIT_REF_NAME} --recursive --extensions h5,cpp,h,yml,tcl,sh,png,pdf,rpt 
   artifacts:
     paths:
       - $Name
