--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -42,16 +42,16 @@ data:
   extends:
     - .template
   stage: data
-  rules:
-     - changes:  # Include the job and set to when:manual if any of the follow paths match a modified file.
-         - tagger/data/**
-  when: manual
+  # rules:
+  #    - changes:  # Include the job and set to when:manual if any of the follow paths match a modified file.
+  #        - tagger/data/**
+  # when: manual
   script:
   - source activate tagger
   - mkdir data
   - cd data
   - mc cp $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir/$Dataset ./
-  - mc cp $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir/VBFHtt_PU200.root ./VBFHtt.root
+  - mc cp $ARTIFACTS_ALIAS/$ARTIFACTS_BUCKET/$DataDir/VBFHtt_PU200.root
   - cd ..
   - python tagger/train/train.py --make-data -i data/$Dataset -sig $Signal
   - tar -cf training_data_$Inputs.tgz training_data
