--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,58 +1,94 @@
 include:
   - local: "CI/template.yml"
 
+# Name = Name of child pipeline
+# Inputs = Which input configuration to ise
+# TRAIN = Which dataset to use for training
+# MINBIAS = Which MinBias to use for rate calculations
+# BBBB = Which dataset to use for HH->BBBB efficiency studies
+# EOS_DATA_DIR = Data directory on eos containing the  above root files
+# EOS_STORAGE_DIR = Directory to store output products
+# EOS_STORAGE_SUBDIR  = Sub Directory for pipeline specific output
+# EOS_STORAGE_DATADIR = Sub directory to store branch intermediate training files
+
 DeepSet:baseline_4param:
-  extends: .ml_pipeline
-  variables:
-    Name: baseline_4param
-    Inputs: baseline
-    DataDir: baselineTRK_4param_221124
-    Dataset: All200.root
-    MINBIAS: MinBias_PU200.root
-    BBBB: ggHHbbbb_PU200.root
-    EOS_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9
-    SCRAM_ARCH: 'el9_amd64_gcc12'
-    CMSSW_VERSION: 'CMSSW_14_0_0_pre3'
-    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_0_0_pre3-JetTaggerNN'
+   extends: .ml_pipeline
+   variables:
+     Name: baseline_4param
+     Inputs: baseline
+     TRAIN: All200.root
+     MINBIAS: MinBias_PU200.root
+     BBBB: ggHHbbbb_PU200.root
+     NTUPLE_TREE: jetntuple/Jets
+     EOS_DATA_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9/baselineTRK_4param_221124
+     EOS_STORAGE_DIR: /eos/project/c/cms-l1t-jet-tagger/CI
+     EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
+     EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
 
 DeepSet:baseline_5param:
-  extends: .ml_pipeline
-  variables:
-    Name: baseline_5param
-    Inputs: baseline
-    DataDir: baselineTRK_5param_221124
-    Dataset: All200.root
-    MINBIAS: MinBias_PU200.root
-    BBBB: ggHHbbbb_PU200.root
-    EOS_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9
-    SCRAM_ARCH: 'el9_amd64_gcc12'
-    CMSSW_VERSION: 'CMSSW_14_0_0_pre3'
-    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_0_0_pre3-JetTaggerNN'
+   extends: .ml_pipeline
+   variables:
+     Name: baseline_5param
+     Inputs: baseline
+     TRAIN: All200.root
+     MINBIAS: MinBias_PU200.root
+     BBBB: ggHHbbbb_PU200.root
+     NTUPLE_TREE: jetntuple/Jets
+     EOS_DATA_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9/baselineTRK_5param_221124
+     EOS_STORAGE_DIR: /eos/project/c/cms-l1t-jet-tagger/CI
+     EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
+     EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
+     SCRAM_ARCH: 'el9_amd64_gcc12'
+     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
+     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_2_0_pre2-JetTaggerNN'
 
 DeepSet:baseline_4param_extended_trk:
   extends: .ml_pipeline
   variables:
-    Name: baseline_4param_extended_trk
-    Inputs: baseline
-    DataDir: extendedTRK_4param_221124
-    Dataset: All200.root
-    MINBIAS: MinBias_PU200.root
-    BBBB: ggHHbbbb_PU200.root
-    EOS_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9
-    SCRAM_ARCH: 'el9_amd64_gcc12'
-    CMSSW_VERSION: 'CMSSW_14_0_0_pre3'
-    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_0_0_pre3-JetTaggerNN'
+     Name: baseline_4param_extended_trk
+     Inputs: baseline
+     TRAIN: All200.root
+     MINBIAS: MinBias_PU200.root
+     BBBB: ggHHbbbb_PU200.root
+     NTUPLE_TREE: jetntuple/Jets
+     EOS_DATA_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9/extendedTRK_4param_221124
+     EOS_STORAGE_DIR: /eos/project/c/cms-l1t-jet-tagger/CI
+     EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
+     EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
+     SCRAM_ARCH: 'el9_amd64_gcc12'
+     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
+     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_2_0_pre2-JetTaggerNN'
 
 DeepSet:baseline_5param_extended_trk:
   extends: .ml_pipeline
   variables:
-    Name: baseline_5param_extended_trk
+     Name: baseline_5param_extended_trk
+     Inputs: baseline
+     TRAIN: All200.root
+     MINBIAS: MinBias_PU200.root
+     BBBB: ggHHbbbb_PU200.root
+     NTUPLE_TREE: jetntuple/Jets
+     EOS_DATA_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9/extendedTRK_5param_221124
+     EOS_STORAGE_DIR: /eos/project/c/cms-l1t-jet-tagger/CI
+     EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
+     EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
+     SCRAM_ARCH: 'el9_amd64_gcc12'
+     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
+     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_2_0_pre2-JetTaggerNN'
+
+DeepSet:new_samples_baseline_5param_extended_trk:
+  extends: .ml_pipeline
+  variables:
+    Name: new_samples_baseline_5param_extended_trk
     Inputs: baseline
-    DataDir: extendedTRK_5param_221124
-    Dataset: All200.root
+    TRAIN: All200.root
     MINBIAS: MinBias_PU200.root
-    BBBB: ggHHbbbb_PU200.root
-    EOS_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_ntuples_v131Xv9
+    BBBB: GluGluHHTo4B_PU200.root
+    NTUPLE_TREE: outnano/Jets
+    EOS_DATA_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_jettuples_090125/
+    EOS_STORAGE_DIR: /eos/project/c/cms-l1t-jet-tagger/CI
+    EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
+    EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
     SCRAM_ARCH: 'el9_amd64_gcc12'
-    CMSSW_VERSION: 'CMSSW_14_0_0_pre3'
-    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_0_0_pre3-JetTaggerNN'
+    CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
+    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_2_0_pre2-JetTaggerNN'
