--- a/CI/cmssw.yml
+++ b/CI/cmssw.yml
@@ -8,12 +8,14 @@ emulate:
     #- yum install -q -y python3 python3-virtualenv mesa-libGL-devel mesa-libGLU-devel libXpm-devel openssl-devel ncurses-compat-libs 
     - source /cvmfs/grid.cern.ch/etc/profile.d/setup-cvmfs-ui.sh
     - source /cvmfs/cms.cern.ch/cmsset_default.sh
+    - echo "$AUTO_DEVOPS_CERNBOX_PASS" | kinit "$AUTO_DEVOPS_CERNBOX_USER@CERN.CH" > /dev/null
+    - ls /eos/cms/store/cmst3/group/l1tr/FastPUPPI/14_2_X/
   script:
     - ./CI/setup_cmssw.sh -run ${CMSSW_VERSION} ${CMSSW_L1CT}
   timeout: 2h
   artifacts:
     when: always
     paths:
-      - ${CMSSW_VERSION}/src/FastPUPPI/NtupleProducer/python/jetTuple.root
+      - ${CMSSW_VERSION}/src/FastPUPPI/NtupleProducer/python/jetTuple_extended_5.root
       - ${CMSSW_VERSION}/cmsRun.log
       - ${CMSSW_VERSION}/compilation.log
