Add Di-Taus Physics Plotting Script (#25)
* add first scripts for di-taus

* derive working points

* add efficiency plotting

* add ditaus scripts to CI

* typo

* add di-tau topo working point derivation

* add rate plotting

* add topology trigger plotting

* add topology trigger to CI

* add png plotting

* modify readmes

* add in seedcone limit for common sense check

* minor indexing change

* small update to bbbb

* actually just fix it back

--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -108,9 +108,19 @@ evaluate:
   - cd data
   - eos cp $EOS_DATA_DIR/$MINBIAS .
   - eos cp $EOS_DATA_DIR/$BBBB .
+  - eos cp $EOS_DATA_DIR/$VBFHTAUTAU .
   - cd ..
+  - echo "bbbb performance"
   - python tagger/plot/bbbb.py --deriveWPs --minbias data/$MINBIAS -n 650000 --tree $NTUPLE_TREE
   - python tagger/plot/bbbb.py --eff -s data/$BBBB -n 500000 --tree $NTUPLE_TREE
+  - echo "VBF tautau performance"
+  - python tagger/plot/diTaus.py --deriveWPs --minbias data/$MINBIAS -n 650000 --tree $NTUPLE_TREE
+  - python tagger/plot/diTaus.py --BkgRate --minbias data/$MINBIAS -n 500000 --tree $NTUPLE_TREE
+  - python tagger/plot/diTaus.py --eff --vbf_sample data/$VBFHTAUTAU -n 500000 --tree $NTUPLE_TREE
+  - echo "Topology tautau performance"
+  - python tagger/plot/diTaus_topo.py --deriveWPs --minbias data/$MINBIAS -n 650000 --tree $NTUPLE_TREE
+  - python tagger/plot/diTaus_topo.py --BkgRate --minbias data/$MINBIAS -n 500000 --tree $NTUPLE_TREE
+  - python tagger/plot/diTaus_topo.py --eff --vbf_sample data/$VBFHTAUTAU -n 500000 --tree $NTUPLE_TREE
   - eos mkdir -p ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/plots/physics
   - eos cp -r output/baseline/plots/physics ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/plots/physics
   artifacts:
