Remove hls wrapper and add bbbb gen mHH plotting (#29)
* move wrapper to correlator-common

* add bbbb mHH plotting

* add exception for bbbb

--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -102,7 +102,7 @@ evaluate:
   - mkdir data
   - cd data
   - eos cp $EOS_DATA_DIR/$MINBIAS .
-  - eos cp $EOS_DATA_DIR/$BBBB .
+  - eos cp $BBBB_EOS_DIR/$BBBB .
   - eos cp $EOS_DATA_DIR/$VBFHTAUTAU .
   - cd ..
   - echo "bbbb performance"
