Emulation name change (#30)
* Split synth across two steps

* Make pre synth stage

* Fix ml pipeline

* Minor fixes

* Fix to pre synth

* fix pipeline

* syntax pipeline

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Some constaint tweaks

* Try adding thread constraint

* Reduce resoure usage

* Rollback changes to train

* Try more threads

* Try using gpu node

* Take up whole cpu intensive node

* Roll back train to self hosted PC

* Tweaks to scripts arguments

* Pipeline fix

* Remove eos requirement for synth job

* Fixes + code checks

* Move get reports function

* Update name of model

* Fix missing quote

* Split synth across two steps

* Fix to pre synth

* fix pipeline

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Some constaint tweaks

* Try adding thread constraint

* Reduce resoure usage

* Try more threads

* Try using gpu node

* Take up whole cpu intensive node

* Roll back train to self hosted PC

* Remove eos requirement for synth job

* Fixes + code checks

* Update name of model

* Fix missing quote

* Change fastpuppi branch

* Fix pipeline and names of branches

* Update config.py to new fields

* Fixes to emulator plot

* Add index.php to other directories

* typo in ml_pipeline.yml

* Add printing to emulator compare

* Split synth across two steps

* Fix to pre synth

* fix pipeline

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Update ml_pipeline.yml

* Some constaint tweaks

* Try adding thread constraint

* Reduce resoure usage

* Try more threads

* Try using gpu node

* Take up whole cpu intensive node

* Roll back train to self hosted PC

* Remove eos requirement for synth job

* Fixes + code checks

* Update name of model

* Fix missing quote

* Change fastpuppi branch

* Split synth across two steps

* Fix to pre synth

* fix pipeline

* Update ml_pip

--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -24,7 +24,7 @@ variables:
     EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
     SCRAM_ARCH: 'el9_amd64_gcc12'
     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
-    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:P2L1JetTagger_14_2_0_pre2-JetTaggerNN'
+    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
 
 .template:
   image: gitlab-registry.cern.ch/ml_l1/ops/docker-images/mamba_jettagger:latest
@@ -149,13 +149,13 @@ synth:
   stage: synth
   needs : [hls4ml]
   script:
-    - cd tagger/firmware/JetTaggerNN
+    - cd tagger/firmware/L1TSC4NGJetModel
     - vitis_hls -f build_prj.tcl
     - vivado -mode batch -source vivado_synth.tcl 
     - cd ../../..
   artifacts:
     paths:
-      - tagger/firmware/JetTaggerNN
+      - tagger/firmware/L1TSC4NGJetModel
     expire_in: 1 day
 
 emulation-evaluate:
@@ -201,7 +201,7 @@ profile:
   - cd hls4ml
   - pip install .[profiling]
   - cd ..
-  - ls tagger/firmware/JetTaggerNN/JetTaggerNN_prj/solution1/syn/report/
+  - ls tagger/firmware/L1TSC4NGJetModel/L1TSC4NGJetModel_prj/solution1/syn/report/
   - python tagger/firmware/hls4ml_profile.py -r True -n $Name
   artifacts:
     paths:
@@ -224,9 +224,9 @@ upload:
     - source activate tagger
     - mkdir $Name
     - cd tagger/firmware
-    - tar -cvf JetTaggerNN.tgz JetTaggerNN
+    - tar -cvf L1TSC4NGJetModel.tgz L1TSC4NGJetModel
     - eos mkdir -p ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
-    - cp -r JetTaggerNN.tgz ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
+    - cp -r L1TSC4NGJetModel.tgz ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
     - cd ../..
     - mkdir $Name/plots
     - cp -r output/baseline/model $Name/model
