--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -35,9 +35,9 @@ variables:
     - python $FOLDER/$SCRIPT $ARGS
   tags:
     - docker
-  # rules: # run automatically on default branch, tags, and on merge requests with 'ci::automatic-build' label; otherwise run manually
-  #    - if: '($CI_COMMIT_TAG || $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_MERGE_REQUEST_LABELS =~ /ci::automatic-build/)'
-  #      when: on_success
+  rules: # run automatically on default branch, tags, and on merge requests with 'ci::automatic-build' label; otherwise run manually
+     - if: '($CI_COMMIT_TAG || $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_MERGE_REQUEST_LABELS =~ /ci::automatic-build/)'
+       when: on_success
 
 data:
   extends:
@@ -71,6 +71,10 @@ train:
   needs:
     - job : data
       optional: true
+  rules:
+    - changes:  # Include the job if any of the follow paths match a modified file.
+        - tagger/train/**
+        - tagger/data/**
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
   - tar -xf training_data_$Inputs.tgz
@@ -78,6 +82,9 @@ train:
   - python tagger/train/train.py -n $Name -p 50
   - python tagger/train/train.py --plot-basic -n $Name
   - cd output/baseline
+  - eos mkdir ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/model
+  - eos cp model/saved_model.h5 ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/model/saved_model.h5 .
+  - export MODEL_LOCATION=${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/model
   artifacts:
     paths:
       - output
@@ -94,7 +101,9 @@ evaluate:
   variables:
     KUBERNETES_MEMORY_REQUEST: 32Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: [train]
+  needs: 
+    - job : train
+      optional : true
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
   - tar -xf training_data_$Inputs.tgz
@@ -106,6 +115,9 @@ evaluate:
   - eos cp $BBTT_EOS_DIR/$BBTT .
   - eos cp $EOS_DATA_DIR/$VBFHTAUTAU .
   - cd ..
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
   - echo "bbbb performance"
   - python tagger/plot/bbbb.py --deriveWPs --minbias data/$MINBIAS -n 650000 --tree $NTUPLE_TREE
   - python tagger/plot/bbbb.py --eff -s data/$BBBB -n 500000 --tree $NTUPLE_TREE
@@ -141,8 +153,12 @@ hls4ml:
   stage: hls4ml
   needs:
     - job : train
+      optional : true
   script:
   - source activate tagger
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
   - python tagger/firmware/hls4ml_convert.py
   artifacts:
     paths:
@@ -173,13 +189,18 @@ emulation-evaluate:
   variables:
     KUBERNETES_MEMORY_REQUEST: 8Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: [emulate,train,hls4ml]
+  needs: 
+    - job: emulate,train,hls4ml
+      optional : true
   dependencies: [emulate,train,hls4ml]
   script:
   - mkdir data
   - cd data
   - cp ../${CMSSW_VERSION}/src/FastPUPPI/NtupleProducer/python/jetTuple_${TRACK_ALGO}_${N_PARAMS}.root .
   - cd ..
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
   - source activate tagger
   - python tagger/plot/makeEmulationPlot.py -r True -i data/jetTuple_${TRACK_ALGO}_${N_PARAMS}.root
   artifacts:
@@ -195,7 +216,9 @@ profile:
   variables:
     KUBERNETES_MEMORY_REQUEST: 8Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: [emulate,synth,train]
+  needs: 
+    - job: emulate,train,hls4ml
+      optional : true
   dependencies: [emulate,synth,train]
   script:
   - source activate tagger
@@ -203,6 +226,9 @@ profile:
   - cd data
   - cp ../${CMSSW_VERSION}/src/FastPUPPI/NtupleProducer/python/jetTuple_${TRACK_ALGO}_${N_PARAMS}.root .
   - cd ..
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
   - pip uninstall hls4ml -y
   - git clone https://github.com/CMS-L1T-Jet-Tagging/hls4ml.git -b jet_tagger
   - cd hls4ml
@@ -222,7 +248,9 @@ upload:
   variables:
     KUBERNETES_MEMORY_REQUEST: 4Gi
     KUBERNETES_CPU_REQUEST: 1
-  needs: [emulation-evaluate,hls4ml,train,evaluate,profile]
+  needs:
+    job: emulation-evaluate,hls4ml,train,evaluate,profile
+    optional : true
   dependencies: [emulation-evaluate,hls4ml,train,evaluate,profile]
   before_script:
     - export PYTHONPATH=/builds/ml_l1/TrainTagger:$PYTHONPATH
@@ -235,6 +263,9 @@ upload:
     - eos mkdir -p ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
     - cp -r L1TSC4NGJetModel.tgz ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
     - cd ../..
+    - cd output/baseline/model
+    - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+    - cd ../../..
     - mkdir $Name/plots
     - cp -r output/baseline/model $Name/model
     - mv output/baseline/plots/emulation $Name/plots
