--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -38,9 +38,9 @@ variables:
     - python $FOLDER/$SCRIPT $ARGS
   tags:
     - docker
-  # rules: # run automatically on default branch, tags, and on merge requests with 'ci::automatic-build' label; otherwise run manually
-  #    - if: '($CI_COMMIT_TAG || $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_MERGE_REQUEST_LABELS =~ /ci::automatic-build/)'
-  #      when: on_success
+  rules: # run automatically on default branch, tags, and on merge requests with 'ci::automatic-build' label; otherwise run manually
+     - if: '($CI_COMMIT_TAG || $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_MERGE_REQUEST_LABELS =~ /ci::automatic-build/)'
+       when: on_success
 
 data:
   extends:
@@ -74,6 +74,10 @@ train:
   needs:
     - job : data
       optional: true
+  rules:
+    - changes:  # Include the job if any of the follow paths match a modified file.
+        - tagger/train/**
+        - tagger/data/**
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
   - tar -xf training_data_$Inputs.tgz
@@ -95,7 +99,9 @@ evaluate:
   variables:
     KUBERNETES_MEMORY_REQUEST: 32Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: [train]
+  needs: 
+    - job : train
+      optional : true
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
   - tar -xf training_data_$Inputs.tgz
@@ -107,6 +113,9 @@ evaluate:
   - eos cp $BBTT_EOS_DIR/$BBTT .
   - eos cp $EOS_DATA_DIR/$VBFHTAUTAU .
   - cd ..
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
   - echo "bbbb performance"
   - python tagger/plot/bbbb.py --deriveWPs --minbias data/$MINBIAS -n 650000 --tree $NTUPLE_TREE
   - python tagger/plot/bbbb.py --eff -s data/$BBBB -n 500000 --tree $NTUPLE_TREE
@@ -142,8 +151,12 @@ hls4ml:
   stage: hls4ml
   needs: 
     - job : train
+      optional : true
   script:
   - source activate tagger
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
   - python tagger/firmware/hls4ml_convert.py
   artifacts:
     paths:
@@ -174,13 +187,18 @@ emulation-evaluate:
   variables:
     KUBERNETES_MEMORY_REQUEST: 8Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: [emulate,train,hls4ml]
+  needs: 
+    - job: emulate,train,hls4ml
+      optional : true
   dependencies: [emulate,train,hls4ml]
   script:
   - mkdir data
   - cd data
   - cp ../${CMSSW_VERSION}/src/FastPUPPI/NtupleProducer/python/jetTuple_extended_5.root .
   - cd ..
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
   - source activate tagger
   - python tagger/plot/makeEmulationPlot.py -r True
   artifacts:
@@ -196,7 +214,9 @@ profile:
   variables:
     KUBERNETES_MEMORY_REQUEST: 8Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: [emulate,synth,train]
+  needs: 
+    - job: emulate,train,hls4ml
+      optional : true
   dependencies: [emulate,synth,train]
   script:
   - source activate tagger
@@ -204,6 +224,9 @@ profile:
   - cd data
   - cp ../${CMSSW_VERSION}/src/FastPUPPI/NtupleProducer/python/jetTuple_extended_5.root .
   - cd ..
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
   - pip uninstall hls4ml -y
   - git clone https://github.com/CMS-L1T-Jet-Tagging/hls4ml.git -b jet_tagger
   - cd hls4ml
@@ -223,7 +246,9 @@ upload_new_model:
   variables:
     KUBERNETES_MEMORY_REQUEST: 4Gi
     KUBERNETES_CPU_REQUEST: 1
-  needs: [emulation-evaluate,hls4ml,train,evaluate,profile]
+  needs:
+    job: emulation-evaluate,hls4ml,train,evaluate,profile
+    optional : true
   dependencies: [emulation-evaluate,hls4ml,train,evaluate,profile]
   rules:
     - if: $RERUN_ON_TAG == "False"
@@ -238,6 +263,9 @@ upload_new_model:
     - eos mkdir -p ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
     - cp -r L1TSC4NGJetModel.tgz ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
     - cd ../..
+    - cd output/baseline/model
+    - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+    - cd ../../..
     - mkdir $Name/plots
     - cp -r output/baseline/model $Name/model
     - mv output/baseline/plots/emulation $Name/plots
